--- a/front_end/profile.html
+++ b/front_end/profile.html
@@ -215,7 +215,7 @@
                         <div class="accordion-body">
                             Name: <span id="detailName">User</span><br>
                             Email: <span id="detailEmail">No email set</span><br>
-                            Member Since: <span id="joinedDate">December 2025</span>
+                            Member Since: <span id="joinedDate">Loading...</span>
                         </div>
                     </div>
                 </div>
@@ -268,146 +268,154 @@
     <script src="assets/js/api.js"></script>
     <script src="assets/js/auth.js"></script>
 
-   <script>
-    // Auth Guard
-    if (!localStorage.getItem('access_token')) {
-        window.location.href = 'index.html';
-    }
-
-    async function loadProfileAndStats() {
-    try {
-        const [userData, statsData] = await Promise.all([
-            apiGet('/api/profile/'),
-            apiGet('/api/stats/')
-        ]);
-
-        const fullName = `${userData.first_name || ''} ${userData.last_name || ''}`.trim() || userData.username || 'User';
-        const initial = fullName.charAt(0).toUpperCase() || 'U';
-        const email = userData.email || 'No email set';
-
-        // Avatar handling (with full URL + cache bust)
-        let avatarUrl = userData.avatar 
-            ? (userData.avatar.startsWith('http') ? userData.avatar : BASE_URL + userData.avatar)
-            : null;
-
-        const photoElements = ['sidebarPhoto', 'mobilePhoto', 'previewImage'];
-        photoElements.forEach(id => {
-            const el = document.getElementById(id);
-            if (avatarUrl) {
-                el.src = avatarUrl + '?t=' + Date.now();
-                el.textContent = '';
-                el.classList.add('has-photo');
-            } else {
-                el.src = '';
-                el.textContent = initial;
-                el.classList.remove('has-photo');
-            }
-        });
-
-        // Update ALL name and email displays
-        ['sidebarName', 'mobileName', 'detailName'].forEach(id => {
-            document.getElementById(id).textContent = fullName;
-        });
-
-        ['sidebarEmail', 'mobileEmail', 'detailEmail'].forEach(id => {
-            document.getElementById(id).textContent = email;
-        });
-
-        // Form fields
-        document.getElementById('first_name').value = userData.first_name || '';
-        document.getElementById('last_name').value = userData.last_name || '';
-        document.getElementById('email').value = userData.email || '';
-
-        // Stats
-        document.getElementById('statWorkouts').textContent = statsData.total_activities || 0;
-        document.getElementById('statDistance').textContent = (statsData.total_distance || 0).toFixed(1);
-        document.getElementById('statCalories').textContent = statsData.total_calories || 0;
-
-        // Joined date (static for now)
-        document.getElementById('joinedDate').textContent = 'Member since December 2025';
-
-    } catch (err) {
-        console.error('Failed to load profile/stats:', err);
-    }
-}
-
-    // Image preview (local)
-    document.getElementById('previewImage').onclick = () => document.getElementById('profile_image').click();
-
-    document.getElementById('profile_image').addEventListener('change', (e) => {
-        const file = e.target.files[0];
-        if (file) {
-            const reader = new FileReader();
-            reader.onload = (ev) => {
-                document.getElementById('previewImage').src = ev.target.result;
-                document.getElementById('previewImage').textContent = '';
-                document.getElementById('previewImage').classList.add('has-photo');
-            };
-            reader.readAsDataURL(file);
+    <script>
+        // Auth Guard
+        if (!localStorage.getItem('access_token')) {
+            window.location.href = 'index.html';
         }
-    });
 
-    // UPDATE WITH TOKEN REFRESH + DELAYED RELOAD
-    document.getElementById('profileForm').addEventListener('submit', async (e) => {
-        e.preventDefault();
-        const messageEl = document.getElementById('updateMessage');
-        messageEl.textContent = 'Updating...';
-        messageEl.style.color = '#007bff';
+        async function loadProfileAndStats() {
+            try {
+                const [userData, statsData] = await Promise.all([
+                    apiGet('/api/profile/'),
+                    apiGet('/api/stats/')
+                ]);
 
-        const formData = new FormData();
-        formData.append('first_name', document.getElementById('first_name').value.trim());
-        formData.append('last_name', document.getElementById('last_name').value.trim());
-        formData.append('email', document.getElementById('email').value.trim());
+                const fullName = `${userData.first_name || ''} ${userData.last_name || ''}`.trim() || userData.username || 'User';
+                const initial = fullName.charAt(0).toUpperCase() || 'U';
+                const email = userData.email || 'No email set';
 
-        const imageFile = document.getElementById('profile_image').files[0];
-        if (imageFile) formData.append('avatar', imageFile);
+                // Avatar handling (with full URL + cache bust)
+                let avatarUrl = userData.avatar 
+                    ? (userData.avatar.startsWith('http') ? userData.avatar : BASE_URL + userData.avatar)
+                    : null;
 
-        let accessToken = localStorage.getItem('access_token');
-
-        const sendUpdate = async (token) => {
-            return fetch(BASE_URL + '/api/profile/', {
-                method: 'PUT',
-                headers: { 'Authorization': `Bearer ${token}` },
-                body: formData
-            });
-        };
-
-        try {
-            let response = await sendUpdate(accessToken);
-
-            if (response.status === 401) {
-                const refreshToken = localStorage.getItem('refresh_token');
-                if (!refreshToken) throw new Error('Session expired');
-
-                const refreshResp = await fetch(BASE_URL + '/api/token/refresh/', {
-                    method: 'POST',
-                    headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify({ refresh: refreshToken })
+                const photoElements = ['sidebarPhoto', 'mobilePhoto', 'previewImage'];
+                photoElements.forEach(id => {
+                    const el = document.getElementById(id);
+                    if (avatarUrl) {
+                        el.src = avatarUrl + '?t=' + Date.now();
+                        el.textContent = '';
+                        el.classList.add('has-photo');
+                    } else {
+                        el.src = '';
+                        el.textContent = initial;
+                        el.classList.remove('has-photo');
+                    }
                 });
 
-                if (!refreshResp.ok) throw new Error('Refresh failed');
+                // Update ALL name and email displays
+                ['sidebarName', 'mobileName', 'detailName'].forEach(id => {
+                    document.getElementById(id).textContent = fullName;
+                });
 
-                const refreshData = await refreshResp.json();
-                localStorage.setItem('access_token', refreshData.access);
-                accessToken = refreshData.access;
+                ['sidebarEmail', 'mobileEmail', 'detailEmail'].forEach(id => {
+                    document.getElementById(id).textContent = email;
+                });
 
-                response = await sendUpdate(accessToken);
+                // Form fields
+                document.getElementById('first_name').value = userData.first_name || '';
+                document.getElementById('last_name').value = userData.last_name || '';
+                document.getElementById('email').value = userData.email || '';
+
+                // Stats
+                document.getElementById('statWorkouts').textContent = statsData.total_activities || 0;
+                document.getElementById('statDistance').textContent = (statsData.total_distance || 0).toFixed(1);
+                document.getElementById('statCalories').textContent = statsData.total_calories || 0;
+
+                // DYNAMIC Member Since
+                let joinedText = 'Member since unknown';
+                if (userData.date_joined) {
+                    const date = new Date(userData.date_joined);
+                    const options = { year: 'numeric', month: 'long', day: 'numeric' };
+                    joinedText = `Member since ${date.toLocaleDateString('en-US', options)}`;
+                }
+                document.getElementById('joinedDate').textContent = joinedText;
+
+            } catch (err) {
+                console.error('Failed to load profile/stats:', err);
             }
-
-            if (!response.ok) throw new Error('Update failed on server');
-
-            messageEl.textContent = 'Profile updated successfully!';
-            messageEl.style.color = '#28a745';
-
-            // IMPORTANT: Longer delay for server to process image upload
-            setTimeout(loadProfileAndStats, 2000);
-
-        } catch (err) {
-            messageEl.textContent = 'Update failed: ' + (err.message || 'Try again');
-            messageEl.style.color = '#dc3545';
         }
-    });
 
-    // Initial load
-    loadProfileAndStats();
-</script>
+        // Image preview (local)
+        document.getElementById('previewImage').onclick = () => document.getElementById('profile_image').click();
+
+        document.getElementById('profile_image').addEventListener('change', (e) => {
+            const file = e.target.files[0];
+            if (file) {
+                const reader = new FileReader();
+                reader.onload = (ev) => {
+                    document.getElementById('previewImage').src = ev.target.result;
+                    document.getElementById('previewImage').textContent = '';
+                    document.getElementById('previewImage').classList.add('has-photo');
+                };
+                reader.readAsDataURL(file);
+            }
+        });
+
+        // UPDATE WITH TOKEN REFRESH + DELAYED RELOAD
+        document.getElementById('profileForm').addEventListener('submit', async (e) => {
+            e.preventDefault();
+            const messageEl = document.getElementById('updateMessage');
+            messageEl.textContent = 'Updating...';
+            messageEl.style.color = '#007bff';
+
+            const formData = new FormData();
+            formData.append('first_name', document.getElementById('first_name').value.trim());
+            formData.append('last_name', document.getElementById('last_name').value.trim());
+            formData.append('email', document.getElementById('email').value.trim());
+
+            const imageFile = document.getElementById('profile_image').files[0];
+            if (imageFile) formData.append('avatar', imageFile);
+
+            let accessToken = localStorage.getItem('access_token');
+
+            const sendUpdate = async (token) => {
+                return fetch(BASE_URL + '/api/profile/', {
+                    method: 'PUT',
+                    headers: { 'Authorization': `Bearer ${token}` },
+                    body: formData
+                });
+            };
+
+            try {
+                let response = await sendUpdate(accessToken);
+
+                if (response.status === 401) {
+                    const refreshToken = localStorage.getItem('refresh_token');
+                    if (!refreshToken) throw new Error('Session expired');
+
+                    const refreshResp = await fetch(BASE_URL + '/api/token/refresh/', {
+                        method: 'POST',
+                        headers: { 'Content-Type': 'application/json' },
+                        body: JSON.stringify({ refresh: refreshToken })
+                    });
+
+                    if (!refreshResp.ok) throw new Error('Refresh failed');
+
+                    const refreshData = await refreshResp.json();
+                    localStorage.setItem('access_token', refreshData.access);
+                    accessToken = refreshData.access;
+
+                    response = await sendUpdate(accessToken);
+                }
+
+                if (!response.ok) throw new Error('Update failed on server');
+
+                messageEl.textContent = 'Profile updated successfully!';
+                messageEl.style.color = '#28a745';
+
+                // Give server time to process image upload
+                setTimeout(loadProfileAndStats, 2000);
+
+            } catch (err) {
+                messageEl.textContent = 'Update failed: ' + (err.message || 'Try again');
+                messageEl.style.color = '#dc3545';
+            }
+        });
+
+        // Initial load
+        loadProfileAndStats();
+    </script>
+</body>
+</html>
