fixed profile.html bug

--- a/front_end/add_activity.html
+++ b/front_end/add_activity.html
@@ -164,7 +164,7 @@
 
             const data = {
                 activity_type: activityType,
-                duration_minutes: duration,  // This is the key fix
+                duration: duration,  // This is the key fix
                 distance_km: distanceKm,
                 date: date,
                 notes: notes,
