--- a/front_end/add_activity.html
+++ b/front_end/add_activity.html
@@ -137,6 +137,7 @@
 
         // FIXED FORM SUBMISSION
         // FIXED FORM SUBMISSION
+// FIXED FORM SUBMISSION - matches your models.py exactly
 document.getElementById('addActivityForm').addEventListener('submit', async (e) => {
     e.preventDefault();
     const messageEl = document.getElementById('form-message');
@@ -155,8 +156,8 @@ document.getElementById('addActivityForm').addEventListener('submit', async (e) 
         return;
     }
 
-    // Estimate calories_burned
-    let calRate = 8;
+    // Estimate calories (optional but good UX)
+    let calRate = 8; // default
     const lowerType = activityType.toLowerCase();
     if (lowerType.includes('run') || lowerType.includes('swim')) calRate = 12;
     if (lowerType.includes('cycle')) calRate = 10;
@@ -165,11 +166,11 @@ document.getElementById('addActivityForm').addEventListener('submit', async (e) 
 
     const data = {
         activity_type: activityType,
-        duration: duration,               // Correct field name (matches models.py)
+        duration: duration,                  // Exact match to model
         distance_km: distanceKm,
         date: date,
         notes: notes,
-        calories_burned: Math.round(duration * calRate)
+        calories_burned: Math.round(duration * calRate)  // Estimated
     };
 
     try {
@@ -183,11 +184,10 @@ document.getElementById('addActivityForm').addEventListener('submit', async (e) 
 
     } catch (err) {
         console.error('Save failed:', err);
-        messageEl.textContent = `Failed: ${err.message || 'Check fields and try again'}`;
+        messageEl.textContent = `Failed to save: ${err.message || 'Invalid data'}`;
         messageEl.className = 'mt-3 text-center text-danger fw-bold';
     }
 });
-
         loadUserProfile();
     </script>
 </body>
